[package]
name = "just-print-i-beg-of-you"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
rmp-serde = "0.15.5"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde_json = "1.0.71"
serde_yaml = "0.8.21"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
